--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Japanese keyboard in the browser.",
   "main": "index.js",
   "dependencies": {
+    "bulma": "^0.7.2",
     "mithril": "^1.1.6"
   },
   "devDependencies": {
